=======
CHANGES
=======

0.13 (unreleased)
=================

- Nothing changed yet.


0.12 (2009-12-14)
=================

- Added ``include-dependencies`` option that automatically includes the
  dependencies of the specified packages.  Very handy to get an automatically
  updated list of those packages that are most useful to test: all our
  dependencies.


0.11 (2009-09-30)
=================

- Removed the "check out packages from subversion" feature.
  If you require such functionality, mr.developer
  <http://pypi.python.org/pypi/mr.developer> provides this much more
  comprehensively (and for multiple version control systems, too) .

0.10 (2009-09-28)
=================

- Options prefixed by ``runner-`` are automatically passed to generated test
  runners.

0.9 (2009-09-14)
================

- Test runner: return the exit code 1 in case of test failures; this simplifies
  buildbot configurations.

0.8 (2009-08-17)
================

- Windoes is now supported.

- Changed the default master script name to the part name. (Don't add
  a "test-" prefix any more.)

0.7 (2009-08-13)
================

- Simplified building the list of packages even more: we now just take a list of
  packages, period.

0.6 (2009-08-07)
================

- Restructured the way we construct our list of packages to test:
  We no longer filter a list we retrieved from SVN with includes/excludes,
  but use an explicit list that can be populated from a buildout section,
  e. g. [versions]. Thus, we can now easily test against a KGS.
- Always enable all extras of packages under test.

0.5 (2009-01-29)
================

- Fix duplicate `url` parameter in setup.py that confused Python 2.4 but
  got accepted by Python 2.5.

0.4 (2009-01-29)
================

- Ignore missing package releases for packages listed in Subversion (as
  long as we don't try to run from Subversion).

- Allow parallel execution of the individual test runners by stating
  'max_jobs=X' in the recipe's options.
